Added new fields to Materials and form.
