# app/models/material.rb
@@ -24,7 +24,7 @@ class Material < ApplicationRecord
         title.downcase.gsub(/^(an?|the) /, '')
       end
       text :long_description
-      text :short_description
+      text :contact
       text :doi
       string :authors, :multiple => true
       text :authors
@@ -81,9 +81,9 @@ class Material < ApplicationRecord
 
   # Remove trailing and squeezes (:squish option) white spaces inside the string (before_validation):
   # e.g. "James     Bond  " => "James Bond"
-  auto_strip_attributes :title, :short_description, :long_description, :url, :squish => false
+  auto_strip_attributes :title, :long_description, :url, :squish => false
 
-  validates :title, :short_description, :url, :keywords, :doi, :licence, presence: true
+  validates :title, :long_description, :url, :keywords, :doi, :licence, :contact, presence: true
 
   validates :url, url: true
 
@@ -93,16 +93,12 @@ class Material < ApplicationRecord
 
   update_suggestions(:keywords, :contributors, :authors, :target_audience, :resource_type)
 
-  def short_description= desc
-    super(Rails::Html::FullSanitizer.new.sanitize(desc))
-  end
-
   def long_description= desc
     super(Rails::Html::FullSanitizer.new.sanitize(desc))
   end
 
   def self.facet_fields
-    %w( scientific_topics operations tools standard_database_or_policy target_audience keywords difficulty_level
+    %w( scientific_topics operations tools standard_database_or_policy target_audience keywords
         authors related_resources contributors licence node content_provider user resource_type)
   end
 
